# linedet-cuda

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  out_py.tiff  output_to_rgb.py
include/: filter.hpp  filter_batch.hpp  filter_gpu.hpp  image2d.hpp  linearregression.hpp  matrix_tools.hpp  matrix_tools_gpu.cuh  observation_parser.cuh  observation_parser.hh  parameter.hpp  ppm_parser.hh  segdet.hpp  segdet_batch.hpp  segdet_gpu.hpp  segment.hpp  test_gpu.hpp
src/: file.hh  filter.cpp  filter_batch.cpp  filter_gpu.cpp  main.cpp  matrix_tools.cpp  matrix_tools_gpu.cu  observation_parser.cpp  observation_parser.cu  parse.hh  ppm_parser.hh  segdet.cpp  segdet_batch.cpp  segdet_gpu.cpp  segdet_gpu.cu  test_gpu.cu
test/: image2d_test.cpp  matrix_test.cpp
